--- a/程式碼/index.html
+++ b/程式碼/index.html
@@ -20,17 +20,16 @@
                 <button type="submit">提交</button>
             </form>
             
-            <div id="result" class="result">
+            <div id="result" class="result" style="display:none;">
                 <!-- 結果會顯示在這裡 -->
             </div>
         </div>
     </main>
 
     <footer>
-        <p>? 2024 AI學生成績分析網站</p>
+        <p>© 2024 AI學生成績分析網站</p>
     </footer>
 
     <script src="script.js"></script>
 </body>
 </html>
-
